2011-10-30  Bastian Maerkisch  <bmaerkisch@web.de>

	* INSTALL: Update Windows section.

	* config/makefile.mgw: Superseded by config/mingw/Makefile. Removed.

2011-10-30  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* config/config.nt config/makefile.nt: Windows console apps support
	pipes.

2011-10-30  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.cyg config/config.mgw config/config.nt
	config/config.oww: Enable stats command.

2011-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (make_palette):  Fix segfault caused by initializing a 
	terminal with an "infinite" color palette (colors == 0) when previous 
	terminal had merely a large color palette (e.g. WIN_PAL_COLORS 4096).
	Bug #3429772

2011-10-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/datafile.c src/fit.c src/mouse.c
	src/plot2d.c src/plot3d.c src/save.c src/set.c src/setshow.h src/show.c
	src/stats.c src/tabulate.c src/unset.c term/canvas.trm term/svg.trm:

	Change the axis structure field from TBOOLEAN axis.is_timedata to an
	enum {DT_NORMAL, DT_TIMEDATE} field axis.datatype.  This is preparation
	for adding code to implement a new mode DT_DMS (degrees, minutes,
	seconds) that tracks x and/or y as geographic coordinates.
	There is no change to the behavior of the current code.

2011-10-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Friendlier error message, add a <title> tag at the
	top of the output svg document.

2011-10-17  Christoph Bersch  <cbersch@users.sourceforge.net>

	* docs/doc2texi.el:  Handle presence of three nodes with the same key.

2011-10-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (humlik):
	Re-order code to avoid accessing an unitialized variable.

	* term/emf.trm (EMF_put_text):
	Re-order code to avoid accessing an unitialized variable.

	* src/command.c (else_command):  An else clause might either be
	processed by if_command() or else_command().  The latter was not